--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  font-family: 'quicksand';
+  color: #333;
+  margin: 0;
+}
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.navbar h1{
+  color: #f1356d;
+}
+.navbar .links{
+  margin-left: auto;
+}
+.navbar a{
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover{
+  color: #f1356d;
+}
+.content{
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+}
+button{
+  font-size: medium;
+  padding: 10px;
+}
+.blog-preview{
+  /* box-shadow: #f2f2f2 2px 1px 2px 1px; */
+  border-bottom: 1px solid #fafafa;
+  margin: 20px 0px;
+  padding: 10px 16px;
+}
+.blog-preview :hover{
+  box-shadow: 1px 3px 5px rgba(0.0, 0.0, 0.0, 0.1);
+}
+.blog-preview h2{
+  color: #f1356d;
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+.blog-preview a{
+  text-decoration: none;
+}
+.blog-details h2{
+  font-size: 20px;
+  margin-bottom: 10px;
+  color: #f1356d;
+}
+.blog-details div{
+  margin: 20px;
+  text-align: justify;
+  line-height: 25px;
+}
+.blog-details button{
+  background: #f1356d;
+  color: #fff;
+  border: 0px;
+  padding: 8px;
+  cursor: pointer;
+  border-radius: 8;
+}
+.create{
+  max-width: 400px;
+  margin: 0;
+  text-align: center;
+}
+.create label{
+  text-align: left;
+  display: block;
+}
+.create h2{
+  margin-bottom: 20px;
+  color: #f1356d;
+  font-size: 20px;
+}
+.create input, .create textarea, .create select{
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  display: block;
+  box-sizing: border-box;
+}
+.create button{
+  background: #f1356d;
+  color: #fff;
+  border: 0px;
+  padding: 8px;
+  cursor: pointer;
+  border-radius: 8px;
 }
